# mp4_boxes

./: CMakeLists.txt  README.md  base64.h  boxtypes.h  mp4box.h  utility.h  xmlreader.h
source/: main.cpp  mp4box.cpp  xmlreader.cpp
